--- a/src/CodeBasic/CodeBasic.csproj
+++ b/src/CodeBasic/CodeBasic.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.4.2" />
+  </ItemGroup>
+
 </Project>
